fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,6 @@ background-color:#D3F6DE;
   object-fit:cover;
   
 }
+.pie__overflow{
+  height:fit-content !important;
+}
